tdf#116525 writer, no shadow around box

regression from

    commit 2ccde70d60d3a5074faf49260e8fe0ccdb91ff26
    teach redundantcast plugin about functional casts

because we are now passing the same variable as a both an in-parameter
and an out-parameter

Change-Id: I6454103fbc46530180cde5f725273e062eb2e25d
Reviewed-on: https://gerrit.libreoffice.org/51757
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>